--- a/languages/c/c.org
+++ b/languages/c/c.org
@@ -1,3 +1,4 @@
+- SDL https://nullprogram.com/blog/2023/01/08/
 - https://github.com/hardik05/Damn_Vulnerable_C_Program
 - https://github.com/microsoft/checkedc
 - talks https://nullprogram.com/blog/2018/11/21/
@@ -1386,7 +1387,7 @@ https://0x00sec.org/t/remote-shells-part-i/269/1
 #+end_src
 **** Example: a cheezy multiperson chat server
 - malloc/realloc array for poll() as neede
--  
+- 
 *** select() - Synchronous IO Multiplexing, old school
 *** Handling partial send()s
 *** Serialization
