--- a/languages/scala/videos.org
+++ b/languages/scala/videos.org
@@ -1,66 +1,12 @@
-- https://rapidgator.net/file/1ea3895cf6da644652bd31de15fce3f7/e6iBPAxK__Scala_Adva.part1.rar.html
-- Courses https://sanet.st/blogs/udemy1/functional_programming_with_scala_cats.3784310.html
-  https://rapidgator.net/file/5b05e93edf70abb52ad8be637bd43d27/Sanet.STFunctionalProgrammingwithScalaCats.part2.rar.html
-  https://rapidgator.net/file/7a20b0f758cce345c4bc6d6ad78a31ee/Sanet.STFunctionalProgrammingwithScalaCats.part3.rar.html
-  https://nitro.download/view/D03A91E80E6EA20/Sanet.ST_Functional_Programming_with_Scala_Cats.part2.rar
-  https://nitro.download/view/A66082580111F45/Sanet.ST_Functional_Programming_with_Scala_Cats.part3.rar
 - Channel: Sergei Winitzki https://www.youtube.com/channel/UCWpjX-z6_oNZhcHPzAAQy6g/videos
   Programming Papers explained with scala
-- FP library https://typelevel.org/cats/
-- Async https://zio.dev/
-- Async https://typelevel.org/cats-effect/
-- Build https://github.com/com-lihaoyi/mill
-- HTTP https://http4s.org/
-- https://ebookfoundation.github.io/free-programming-books/books/free-programming-books-langs.html#scala
-- https://github.com/lauris/awesome-scala
-- Article Effective Scala Case Class Patterns
-  https://gist.github.com/chaotic3quilibrium/58e78a2e21ce43bfe0042bbfbb93e7dc
-- Framework: Play Framework.
-  Conocimientos deseables: Slick, Monix Task.
-* Video: 2011 | What Scala Adopted from Erlang         | Martin Odersky
+* 11 | What Scala Adopted from Erlang         | Martin Odersky
 - Quotes from the man that wrote the java spec.
   Gilad Bracha
   - "Threads are to concurrency as witchcraft to physics."
   - "Hanging by a thread is the punishment for shared state concurrency."
 - 08:00
-* Video: 2021 | Functional Programming with Scala Cats | Udemy
-** 2
-*** 9.1 Trait Channel: Inheritance
-#+begin_src scala
-  trait Channel {
-    def write(
-      obj: ByteEncodable
-    ): Unit
-  }
-  trait ByteEncodable {
-    def encode(): Array[Byte]
-  }
-#+end_src
-- Good
-  * unique responsibility (encoding is on a different trait)
-  * easy to test
-  * unhandled type -> compile error
-- Bad
-  * we cannot extend classes we do not have control (eg: Int)
-  * only one implementation
-  * overloaded interface (an extra method in the class we are extending)
-    a problem if a class is big
-*** 9.2 Trait Channel: Type Classes
-#+begin_src scala
-  trait Channel {
-    def write[A](
-      obj: A,
-      enc: ByteEncoder[A]
-    ): Unit
-  }
-  trait ByteEncoder[A] {
-    def encode(a: A): Array[Byte]
-  }
-#+end_src
-- We now receive an encoder as aparameter
-- We now receive a type parameter [A]
-  - We do NOT extend, we write instances
-* Video: 2021 | #Scala Crash Course by a Scala Veteran (with some JavaScript flavor)
+* 21 | #Scala Crash Course by a Scala Veteran (with some JavaScript flavor)
 - Scala 3 has python like identation support
 - everything is an *expression*
   - every expression computes to a *value*
@@ -377,54 +323,3 @@
       override def add(b: Int) Int = a + b
     }
   #+end_src
-* Video: 2013 | 1 - Functional Programming Principles In Scala | Martin Odesky
-** Lecture 1
-** Lecture 2
-** Lecture 3
-** Lecture 4
-** Lecture 5
-** Lecture 6
-** Lecture 7
-** Lecture 8
-** Lecture 9
-* Video
-** Course
-- Introduction to Programming and Problem Solving Using Scala
-  https://www.youtube.com/playlist?list=PLLMXbkbDbVt9MIJ9DV4ps-_trOzWtphYO
-- 3rd - Parallel Programming
-  https://www.youtube.com/channel/UCFVAx3NnF3HpQawLY6KR2DQ
-- 4th - Big Data Analysis with Scala and Spark
-  https://www.youtube.com/channel/UCaezz_KRVlM7GZdxf-4eoPA
-- (Udemy) RockTheJVM - Scala functioning and programming for beginners
-  https://www.youtube.com/playlist?list=PL15cIG7aNbhtZxLafzxmld750BcFw-9Ek
-- (Udemy) RockTheJVM - Advance Scala and functional Programming
-  https://www.youtube.com/playlist?list=PL15cIG7aNbhshROiDuYpFTwoCRXeyBNYx
-* Binary
-** Compatibility
-#+begin_src
-Scala doesn't have binary compatibility, you can't even use a library compiled for 2.12 on Scala 2.13. For that
-reason library developers cross-compile to all versions they support.
-
-This is fixed in Scala 3, but it's only valid for Scala 3 and higher, it doesn't help for Scala 2.
-#+end_src
-* People
-- Martin Odersky (Creator)
-- Dick Wall (Courses)
-* Book: 2020 | Scala From Scratch: Exploration | Daniel Westheide
-scala to javascript https://www.scala-js.org/
-scala on llvm https://www.scala-native.org/en/stable/
-prebuilt openjdk https://adoptopenjdk.net/
-scala build tool (-2021) https://github.com/propensive/fury
-scala build tool https://github.com/com-lihaoyi/mill
-** 1 With a REPL yell
-- templates based on https://github.com/foundweekends/giter8
-#+begin_src
- $ sbt --script-version
-   1.3.13
- $ sbt new dwestheide/minimal-scala-project.g8
- $ cd my-project
- $ sbt console
- console> :q
- console> :quit
- console> :help
-#+end_src
