--- a/languages/c/c/books.org
+++ b/languages/c/c/books.org
@@ -1,224 +1,16 @@
-- SDL https://nullprogram.com/blog/2023/01/08/
-- https://github.com/hardik05/Damn_Vulnerable_C_Program
-- https://github.com/microsoft/checkedc
-- talks https://nullprogram.com/blog/2018/11/21/
-- https://blog.llvm.org/2011/05/what-every-c-programmer-should-know.html
-- A Guide to Undefined Behavior in C and C++, Part 1
-  https://blog.regehr.org/archives/213
-- const https://softwareengineering.stackexchange.com/questions/204500/when-and-for-what-purposes-should-the-const-keyword-be-used-in-c-for-variables
-- https://gjbex.github.io/DPD-online-book/CodingBestPractices/ErrorHandling/error_handling_c/
-- asan, ubsan, valgrind, fuzzers, libcheck, pvs
-- http://infolab.stanford.edu/~ullman/focs.html#pdfs
-- Book: http://c-faq.com/
-- C Books Reviews http://knking.com/recbooks/c.html
-- Code: http://bxr.su/OpenBSD/
-- Example: https://github.com/ltratt/hk/blob/18fcaea3e83f0c00aaef13b2882d5fa233d85de2/hk.c
-- Article: 2016 https://matt.sh/howto-c
-- Article: https://suckless.org/coding_style/
-- Article: 2021 - unfashionable C
-  https://www.yodaiken.com/2021/05/21/your-computer-is-a-fast-pdp-11-and-more-on-c-the-c-standard-and-computer-architecture/
-- Article: 2018 - C Is Not a Low-level Language
-  https://queue.acm.org/detail.cfm?id=3212479
-- Benchmark: https://www.wilfred.me.uk/blog/2014/10/20/the-fastest-bigint-in-the-west/
-- Benchmark: FFI https://github.com/dyu/ffi-overhead
-  - Golang is 40x slower than C
-  - Haskell,Ocaml(opt),Rust are on par with C
-  - Ocaml(C) is 4x slower
-  - LuaJit is faster than C, https://github.com/dyu/ffi-overhead/issues/2#issuecomment-405834411
-    "Using JITing to skip PLT inderection"
-    "Same on C would be -fno-plt"
-- https://fastcompression.blogspot.com/2019/01/writing-safer-c-code.html
-- https://github.com/AnthonyCalandra/modern-cpp-features
-- https://github.com/gerasdf/InsecureProgramming/
-- https://github.com/junegunn/fzf
-- https://github.com/rhysd/vim-clang-format
-- https://not.cafe/2020/10/12/getting-started-with-c-programming.html
-- https://tek256.com/posts/code-hardening/
-- http://blog.lujun9972.win/emacs-document/blog/2018/03/22/emacs-as-a-c++-ide/index.html
-  https://vxlabs.com/2016/04/11/step-by-step-guide-to-c-navigation-and-completion-with-emacs-and-the-clang-based-rtags/
-* Videos
-- tic-tac toe https://www.youtube.com/watch?v=gCVMkKgs3uQ
-- How I program C - Eskil Steenberg - https://www.youtube.com/watch?v=443UNeGrFoM
-** "New" Features in C - Daniel Saks
-   https://www.youtube.com/watch?v=ieERUEhs910
-- C++ dev, working also on C
-- 4 Standards C89=C90/C99/C11/C18(bugfix of 11)
-- Reserved identifiers
-  - for global scope, starting with undersore
-  - for all, starting with 2 underscores, or underscore and uppercase
-- C99 boolean type
-- C90 _STDC_
-  C99 _STDC_VERSION_
-- C99 long long
-- C99 <stdint.h> for exact length ints
-- C90 you couldn't declare after the first line
-     for loop variables declared at the beginning
-  C99 relaxed it, and allows declaration after
-     for loop variables declared inplace
-- C99 inline for functions
-- C99 ~compound literals~, where rational is a typedef struct with 2 members
-  (rational){1,2}
-  (int [m]){8,6,3,1,2,3,4,5,6}
-  (int []){8,6,3,1,2,3,4,5,6}
-- C99 ~designated initializers~, nice for unions or structs (to avoid confusion) or arrays
-  glop g1 = { .i = 10}
-  glop g2 = { .d = 12.3 }
-  int x[10] = { 0, 0, 0, 8, 0, 0, 0,  2}
-  int x[10] = { [3] = 8, [7] = 2 }
-- C99 ~variable length arrays~ VLAs, declaring and as parameters
-  void f(size_t m, size_t n) {
-    int x[m][n];
-- C99 ~Flexible Array Members~, useful for packet-like structures
-  struct packet {
-    header h;
-    data d[]; // THIS
-  }
-** Modern C and What We Can Learn From It - Luca Sas [ ACCU 2021 ] 
-   https://www.youtube.com/watch?v=QpAhX-gsHMs
-- WG14 Standarization Group https://www.open-std.org/jtc1/sc22/wg14/
-- designated initializers, initialize everything else to 0
-- header macro to differentiate between c++ and c
-  __cplusplus
-- Instead using malloc/fopen ask for allocators iocallbacks
-- static_assert()
-- Example: using sokol gfx, we describe a pipeline, we initialize the others to 0/default
-  #+begin_src c
-    sg_pipeline_desc pip_desc = {
-      .layout = {
-        .buffers[0].stride = 28,
-        .attrs = {
-          [ATTR_vs_position].format = SG_VERTEXFORMAT_FLOAT3,
-          [ATTR_vs_color0].format   = SG_VERTEXFORMAT_FLOAT4
-        }
-      },
-      .shared = shd,
-      .index_type = SG_INDEXTYPE_UINT16,
-      .depth_stencil = {
-        .depth_compare_func = SG_COMPAREFUNC_LESS_EQUAL,
-        .depth_write_enagled = true,
-      }
-      .rasterizer.cull_mode = SG_CULLMODE_BACK,
-      .rasterizer.sample_count = SAMPLE_COUNT,
-      .label = "cube-pipeline"
-    };
-  #+end_src
-- C11 _Generic and Overloading
-  #define min(a,b) _Generic((a), float. minf(a,b), int: mini(a,b))
-- C11 atomics, thread_local
-- defer macro
-  #+begin_src c
-    #define macro_var(name) concat(name, __LINE__)
-    #define defer(start,end) for (     \
-       int macro_var(_i_) = (start,0); \
-       !macro_var(_i_);                \
-       (macro_var(_i_) +=, end)
-    #define profile defer(profile_begin(), profile_end())
-    profile
-    {
-     ...
-    }
-    #define gui defer(gui_begin(),gui_end()
-    gui
-    {
-      ...
-    }
-  #+end_src
-- scope macro
-  #+begin_src c
-    file_handle_t file = file_open(filename, file_mode_read);
-    scope(file_close(file))
-    {
-      ...
-    }
-  #+end_src
-- Unions: We can refer to the same thing in different ways
-  #+begin_src c
-    typedef union hmm_vec2
-    {
-      struct { float X, Y; };
-      struct { float U, V; };
-      struct { float Left, Right; };
-      struct { float Width, Height; };
-      float Elements[2];
-    } hmm_vec2;
-  #+end_src
-- Error: return a struct with a *valid* field
-* Libraries
-- Webserver https://mongoose.ws/
-- (3K) minimal cross-platform standalone C headers
-  https://github.com/floooh/sokol
-- (800) math lib https://github.com/HandmadeMath/Handmade-Math
-- https://github.com/oz123/awesome-c
-- https://wiki.gnome.org/Projects/GLib
-- https://github.com/clibs
-- (893) https://github.com/tezc/sc
-- (80) https://github.com/ludocode/pottery
-- (24) https://github.com/begriffs/libderp
-- (10) https://github.com/lelanthran/libds
-* Sanitizers
-- Static http://splint.org/
-- https://www.youtube.com/watch?v=Q2C2lP8_tNE
-- https://github.com/google/sanitizers/wiki/AddressSanitizer
-- https://valgrind.org/docs/manual/quick-start.html
-- https://gcc.gnu.org/onlinedocs/gcc/Instrumentation-Options.html
-* Article: C Runtime Overhead
-  http://ryanhileman.info/posts/lib43
-  https://news.ycombinator.com/item?id=29783585
-- overhead is 9ms of linker and glibc
-- strace -tt shows time in microseconds
-- baseline time without stdlib 0.5ms (-ffreestanding -nostdlib)
-  #+begin_src c
-    // gcc -m32 -ffreestanding -nostdlib
-    void _start() {
-        /* exit system call */
-        asm("movl $1,%eax;"
-            "xorl %ebx,%ebx;"
-            "int  $0x80"
-        );
-    }
-  #+end_src
-- =Bloom filter=, to test SET belongs, for big datasets
-  gives false-positive
-  do not gives false-negatives
-  https://en.wikipedia.org/wiki/Bloom_filter
-- 1ms in linking
-- 5ms in glibc load
-- portable startime libc https://github.com/lunixbochs/lib43
-* 0x00sec
-** I Remote Shells
-https://0x00sec.org/t/remote-shells-part-i/269/1
-** II Remote Shells. Part II. Crypt your link
-- https://0x00sec.org/t/remote-shells-part-ii-crypt-your-link/306
-- https://en.wikipedia.org/wiki/Loop_unrolling
-- SocketPair
-  - Used to transfer data
-  - Are a pair of sockets that are immediatly connected
-    Something like runing a client and a server in 1 call
-  - Kind of like a bidirectional PIPE
-  - Convenient IPC
-- secure_shell()
-  | Parent       | Child              |
-  |--------------+--------------------|
-  | socketpair() |                    |
-  | fork()       | fork()             |
-  | close(sp[0]) | close(sp[1])       |
-  | async_read() | start_shell(sp[0]) |
-- async_read()
-  select()
-  memset()
-  read()
-  memfrob()
-- We use stdin socket as the input socket for async_read() on main()
-** III Remote Shells Part III. Shell Access your Phone
-- setsockopt() - SO_REUSEADDR
-* Projects
-- http://www.tendra.org/tdfc2-config/#S11.2
-  https://github.com/tendra/tendra/wiki/About
-- https://github.com/isometimes/rpi4-osdev
-** clang-format
-  https://emacs.stackexchange.com/questions/55635/how-can-i-set-up-clang-format-in-emacs
-  clang-format -style=llvm -dump-config > .clang-format
-* Book: 2020 | Effective C
+* 02 | Expert C Programming
+** Introduction
+- some people do: if(3==i); in order to catch if they miss a =
+* 19 | Modern C
+** TODO 18 Threads
+- Are another variation of *control flow*
+- thrd_create()
+  thrd_join() - waits until thread is finished
+- "If a thread T0 writes a non-atomic object that is simultaneously read/write by another thread T1,
+  the behavior of the execution becomes undefined."
+- "There are no atomic array types.W
+- Race Free Initilization and ...
+* 20 | Effective C
 ** 1 Getting Started with C
 - C defines 2 possible execution environments:
   - Freestanding: no OS, embedded programming
@@ -437,19 +229,7 @@ https://0x00sec.org/t/remote-shells-part-i/269/1
 | external  | by default at file level                                          |
 | internal  | explicit *static* at file level                                   |
 | nolinkage | variable at block level (static gives it static storage duration) |
-* Book: 2019 | Modern C
-** TODO 18 Threads
-- Are another variation of *control flow*
-- thrd_create()
-  thrd_join() - waits until thread is finished
-- "If a thread T0 writes a non-atomic object that is simultaneously read/write by another thread T1,
-  the behavior of the execution becomes undefined."
-- "There are no atomic array types.W
-- Race Free Initilization and ...
-* Book: 2002 | Expert C Programming
-** Introduction
-- some people do: if(3==i); in order to catch if they miss a =
-* Book: 2022 | Beej's Guide to Network Programming
+* 22 | Beej's Guide to Network Programming
 ** 2 What is a socket?
 - ~socket()~ creates the fd
 - use it with ~recv/send~ calls
@@ -1393,24 +1173,3 @@ https://0x00sec.org/t/remote-shells-part-i/269/1
 *** Serialization
 *** SOn of Data Encapsulation
 *** Broadcast Packets
-* 6.S081: Learning by doing
-Catalog description: Design and implementation of operating systems,
-and their use as a foundation for systems programming. Topics include
-virtual memory; file systems; threads; context switches; kernels;
-interrupts; system calls; interprocess communication; coordination,
-and interaction between software and hardware. A multi-processor
-operating system for RISC-V, xv6, is used to illustrate these
-topics. Individual laboratory assignments involve extending the xv6
-operating system, for example to support sophisticated virtual memory
-features and networking.
-
-You may wonder why we are studying xv6, an operating system that
-resembles Unix v6, instead of the latest and greatest version of
-Linux, Windows, or BSD Unix. xv6 is big enough to illustrate the basic
-design and implementation ideas in operating systems. On the other
-hand, xv6 is far smaller than any modern production O/S, and
-correspondingly easier to understand. xv6 has a structure similar to
-many modern operating systems; once you've explored xv6 you will find
-that much is familiar inside kernels such as Linux.
-- https://pdos.csail.mit.edu/6.S081/2021/schedule.html
-- https://news.ycombinator.com/item?id=30094376
